--- a/profile-page/src/app/profile/components/profile-avatar/profile-avatar.component.css
+++ b/profile-page/src/app/profile/components/profile-avatar/profile-avatar.component.css
@@ -1,12 +1,19 @@
 .avatar-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /*align-items: center;*/
   font-size: 1.1em;
-  line-height: 1.5em;
+  line-height: 2em;
 }
 
 .avatar {
   margin-bottom: 10px;
-  border-radius: 10%;
+  border-radius: 3%;
+  width: 210px;
+  height: 210px;
+}
+
+.avatar-name {
+  font-size: 1.5em;
+  font-weight: bolder;
 }
