--- a/profile-page/src/app/profile/components/profile-details/profile-details.component.css
+++ b/profile-page/src/app/profile/components/profile-details/profile-details.component.css
@@ -1,7 +1,6 @@
-.avatar-container {
+.details-container {
   display: flex;
   flex-direction: column;
-  /*align-items: center;*/
   font-size: 1.1em;
   line-height: 2em;
 }
